<resources>
    <string name="app_name">JNAB</string>
    <string name="title_symposiums">Simposios</string>
    <string name="title_agenda">Agenda</string>
    <string name="title_speakers">Expositores</string>
    <string name="title_talks">Charlas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="content_login_button">Iniciar sesión</string>
    <string name="title_submissions">Trabajos</string>
    <string name="filter_all">Todos</string>
    <string name="filter_pending">Pendiente</string>
    <string name="filter_approved">Aprobado</string>
    <string name="filter_rejected">Rechazado</string>
    <string name="button_apply_filter">Aplicar filtro</string>

    <string name="select_date">Seleccione una fecha</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="clear_filters">Clear Filters</string>

    <string name="all_symposiums">Todos los simposios</string>
    <string name="all_speakers">Todos los ponentes</string>
    <string name="signup_hint_name">Nombre</string>
    <string name="signup_hint_last_name">Apellido</string>
    <string name="signup_hint_confirm_password">Confirmar contraseña</string>
    <string name="signup_button_register">Registrarse</string>
    <string name="signup_text_have_account">¿Tiene una cuenta? Inicie sesión</string>
    <string name="text_no_account_register">¿No tiene una cuenta? Regístrese</string>
    <string name="text_forgot_password_link">Olvidé mi contraseña</string>
    <string name="button_password_recovery">Restablecer contraseña</string>
    <string name="text_back_to_login">Volver al inicio de sesión</string>
    <string name="button_submission_approve">Aprobar</string>
    <string name="button_submission_reject">Rechazar</string>
    <string name="author">Autor</string>
    <string name="description">Descripción</string>
    <string name="submission_status">Estado</string>
    <string name="submission_submitted_at">Fecha de envío</string>
    <string name="rejection_reason">Motivo</string>
    <string name="logout">Cerrar sesión</string>
    <string name="drawer_open">Abrir menú</string>
    <string name="drawer_close">Cerrar menú</string>

    <string-array name="marker_types">
        <item>Alojamiento</item>
        <item>Restaurante</item>
        <item>Agencia</item>
        <item>Otro</item>
    </string-array>

</resources>