<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/rgFilterStates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/filter_all" />

        <RadioButton
            android:id="@+id/rbPending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_pending" />

        <RadioButton
            android:id="@+id/rbApproved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_approved" />

        <RadioButton
            android:id="@+id/rbRejected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_rejected" />
    </RadioGroup>

    <Button
        android:id="@+id/btnApplyFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_apply_filter" />

</LinearLayout>
